--- a/Projeto-Instagram/index.html
+++ b/Projeto-Instagram/index.html
@@ -12,7 +12,7 @@
             <div class="instagram-celular">
                 <img src="img/instagram-celular.png" alt="celular-instagram">
             </div>
-            <div class="instagram-login">
+            <div class="instagram-continue">
                 <div class="group">
                     <img src="img/instagram-logo.png" class="instagram-logo" alt="Logo-Instagram">
                     <div class="foto-perfil">
@@ -20,6 +20,23 @@
                     </div>
                     <a href="#" class="instagram-login">Continue como joao_casagrande6</a>
                     <a href="#" class="instagram-sair">Remover Conta</a>
+                </div>
+
+                <div class="group">
+                    <p class="not-account">Não é <b>joao_casagrande6</b></p>
+                    <p class="not-account">
+                        <span class="link-blue">Alternar Contas</span>
+                        ou
+                        <span class="link-blue">Inscrever-se</span>
+                    </p>
+                </div>
+
+                <div class="baixe-app">
+                    <p class="baixe-aplicativo">Baixe o Aplicativo</p>
+                    <div class="botoes-baixe">
+                        <a href="" class="download-botoes"></a>
+                        <a href="" class="download-botoes"></a>
+                    </div>
                 </div>
             </div>
         </div>
