--- a/Projeto-Instagram/index.html
+++ b/Projeto-Instagram/index.html
@@ -25,17 +25,17 @@
                 <div class="group">
                     <p class="not-account">Não é <b>joao_casagrande6</b></p>
                     <p class="not-account">
-                        <span class="link-blue">Alternar Contas</span>
+                        <span class="link-blue"><a href="https://www.instagram.com/">Alternar Contas</a></span>
                         ou
-                        <span class="link-blue">Inscrever-se</span>
+                        <span class="link-blue"><a href="https://www.instagram.com/accounts/emailsignup/">Inscrever-se</a></span>
                     </p>
                 </div>
 
                 <div class="baixe-app">
                     <p class="baixe-aplicativo">Baixe o Aplicativo</p>
                     <div class="botoes-baixe">
-                        <a href="" class="download-botoes"></a>
-                        <a href="" class="download-botoes"></a>
+                        <a href="https://apps.apple.com/app/instagram/id389801252?vt=lo" target="_blank" class="download-botoes"></a>
+                        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb&utm_campaign=loginPage&ig_mid=6555511B-F862-4BF7-8F2E-AA08805D4AA5&utm_content=lo&utm_medium=badge" target="_blank" class="download-botoes"></a>
                     </div>
                 </div>
             </div>
