--- a/Projeto-Instagram/index.html
+++ b/Projeto-Instagram/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport0" content="width-device-width, initial-scale=1.0">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <title>Instagram</title>
     </head>
@@ -10,7 +10,7 @@
     <body>
         <div class="instagram-wrapper">
             <div class="instagram-celular">
-                <img src="img/instagram-celular.png" alt="celular-instagram">
+                <img src="img/instagram-comp-celular-2.png" alt="celular-instagram">
             </div>
             <div class="instagram-continue">
                 <div class="group">
